--- a/SmallHoneybee/SmallHoneybee.Wpf/Properties/Resources.zh-CN.resx
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Properties/Resources.zh-CN.resx
@@ -153,14 +153,23 @@
   <data name="Dispatched" xml:space="preserve">
     <value>已分配</value>
   </data>
+  <data name="Higher" xml:space="preserve">
+    <value>高级</value>
+  </data>
   <data name="Import" xml:space="preserve">
     <value>导入</value>
   </data>
   <data name="InCome" xml:space="preserve">
     <value>收纳</value>
   </data>
+  <data name="Junior" xml:space="preserve">
+    <value>初级</value>
+  </data>
   <data name="MemberCard" xml:space="preserve">
     <value>充值卡</value>
+  </data>
+  <data name="Middle" xml:space="preserve">
+    <value>中级</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>不详</value>
@@ -188,6 +197,9 @@
   </data>
   <data name="SystemName" xml:space="preserve">
     <value>小蜜蜂零售管理</value>
+  </data>
+  <data name="Top" xml:space="preserve">
+    <value>顶级</value>
   </data>
   <data name="UnitUnionPay" xml:space="preserve">
     <value>银联</value>
